# VoiceAuthenticator

./: .gitignore  README.md  annotate_audio_files.ipynb  pyproject.toml
data/: annotations_augmented_audio_embeddings.json  annotations_original_audio_embeddings.json  annotations_reduced_noise.json  augmented_audio_embeddings.pkl  original_audio_embeddings.pkl  reduced_noise_audio_embeddings.pkl  vox1_vox1_meta.csv
notebooks/: 2_annotate_audio_files.ipynb  3_create_samples_source_annotations.ipynb  4_create_raw_embeddings.ipynb  5_create_augmented_datasets.ipynb  6_preprocessing.ipynb  7_create_reduced_noise_dataset.ipynb  examples_augmentation.ipynb
src/: add_noise.py  convert_mp4_to_wav.py  multiply_amplitude.py  preprocessing.py
src/annotate_data/: annotate_from_path.py
src/augmentation/: add_noise.py  multiply_amplitude.py  subsampling.py
src/config/: project_paths.py  root_path.py
src/embedding/: create_embedding.py  embedded_audio.py
src/notebooks/: annotate_audio_files.ipynb  create_augmented_datasets.ipynb  create_raw_embeddings.ipynb  create_samples_source_annotations.ipynb  eda.ipynb  examples_augmentation.ipynb  similarity_metrics.ipynb
src/ui/: audio_booth.py  main.py  popups.py  user_service.py
